# genix

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
assets/: eff_sample.txt
benches/: bench_generate.rs
examples/: generate_example.rs
src/: clipboard.rs  entropy.rs  generate.rs  genix.rs  lib.rs  main.rs
tests/: integration_test.rs
